deployment.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: adani-recruiter-ui
  namespace: adani-hiring  
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: adani-recruiter-ui  
  template:  
    metadata:  
      labels:  
        app: adani-recruiter-ui  
    spec:  
      containers:  
      - name: adani-recruiter-ui  
        image: acradani.azurecr.io/adani-recruiter-ui:#__#IMAGE_TAG#__#  
        ports:  
        - containerPort: 80  
      imagePullSecrets:  
      - name: imagepull  
---
apiVersion: v1  
kind: Service  
metadata:  
  name: adani-recruiter-ui 
  namespace: adani-hiring  
spec:  
  type: ClusterIP  
  ports:  
  - port: 80  
    targetPort: 80  
  selector:  
    app: adani-recruiter-ui
---
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: adani-recruiter-ui 
  namespace: adani-hiring  
  annotations:  
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/use-regex: "true"  
    nginx.ingress.kubernetes.io/enable-cors: "true"  
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"  
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"  
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"  
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/configuration-snippet: |
spec:  
  ingressClassName: nginx  
  rules:  
  - http:  
      paths:  
      - path: /adani-recruiter-ui(/|$)(.*)
        pathType: Prefix  
        backend:  
          service:  
            name: adani-recruiter-ui
            port:  
              number: 80
